nginx-ville/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-ville
  namespace: default
  labels:
    app: nginx-ville
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx-ville
  template:
    metadata:
      labels:
        app: nginx-ville
    spec:
      containers:
        - name: nginx
          image: nginx:1.29.1
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: nginx-ville
