nginx-ville/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ville
  namespace: default
spec:
  selector:
    app: nginx-ville
  ports:
  - name: http
    targetPort: 80
    port: 80
